# elite-training

./: .gitignore  README.md  build_cuepath_apk.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.antigravity/: implementation_plan-11apr1906-ui-improvements.md  implementation_plan-mobile-app-native-redesign.md  reports-plan.md  timer-implementation_plan.md
.cursor/plans/: cue_path_feature_rollout_ccb8f549.plan.md  drill_path_mobile_41c4adf6.plan.md  (+13 more)
app/: __init__.py  block_presets.py  config.py  deps.py  factory.py  formatting.py  models.py  timer_state.py
data/: mesh_settings.json  programs.json  tier_settings.json
docs/: drill-page-implementation.md  full-feature-list.md  matrix-calculation-of-tier.md  metric-position-success.md  metrics-for-reporting.md  my-profile-menu.md  penalty-factor.md  player-guide-functional.md  pool_precision_progression_notes.md  recovery-metric.md  reporting-fixes.md  training-platform-description.md  web-desktop-feature-behavior-spec.md
electron/: installer.nsh  main.cjs
scripts/: electron-build-prep.cjs  electron-build-run.cjs  migrate_sessions.py  rasterize-icon.cjs
templates/: base.html
tests/: conftest.py  test_about_info.py  test_api_flow.py  test_config_data_dir.py  test_dashboard_reference_session.py  test_derived_metrics.py  test_mobile_pairing.py  test_pool_coach_cache.py  test_pool_coach_mesh.py  test_profile_sessions_export.py  test_profiles.py  test_rack_conversion_tiers.py  test_rack_timeline.py  test_rules_engine.py  test_session_model_legacy.py  test_training_tier.py
(+149 files in other folders)
